kubernetes/doc-home-cluster/apps/downloads/sonarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: notifiarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
  egress:
    # qbittorrent
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    # sabnzbd
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP


    # sabnzbd
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
